[gd_scene load_steps=5 format=3 uid="uid://xw74qgygohvj"]

[ext_resource type="PackedScene" uid="uid://broemaauc26lm" path="res://Source/Object/Fighter/Weapon/Weapon.tscn" id="1_5agcy"]
[ext_resource type="Script" path="res://Source/Object/Fighter/Queen/Weapon.gd" id="2_ivfrw"]
[ext_resource type="Script" path="res://Source/System/Resource/Hitbox.gd" id="3_42xb4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w7b1b"]
radius = 4.0
height = 26.0

[node name="Weapon" instance=ExtResource("1_5agcy")]
script = ExtResource("2_ivfrw")
main_body_offset = 16.0

[node name="DaggerBody" type="Polygon2D" parent="AnimationBody" index="1"]
visible = false
polygon = PackedVector2Array(-2, -2, -2, -1, 2, -1, 2, -3, 18, 2, 2, 3, 2, 1, -2, 1, -2, 2, -3, 2, -3, -2)

[node name="Outline" type="Polygon2D" parent="AnimationBody/DaggerBody" index="0"]
show_behind_parent = true
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -3, -1, -2, 1, -2, 1, -4, 18, 1, 20, 2, 18, 3, 1, 4, 1, 2, -1, 2, -1, 3, -4, 3, -4, -3)

[node name="BowBody" type="Polygon2D" parent="AnimationBody" index="2"]
polygon = PackedVector2Array(1, -13, 3, -12, 4, -11, 4, 11, 3, 12, 1, 13, -2, 15, 0, 10, 0, -10, -2, -15)

[node name="Outline" type="Polygon2D" parent="AnimationBody/BowBody" index="0"]
show_behind_parent = true
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -10, -3, -15, -3, -17, 2, -14, 5, -13, 5, 13, 2, 14, -3, 17, -3, 15, -1, 10)

[node name="ArrowBody" type="Polygon2D" parent="AnimationBody" index="3"]
position = Vector2(6, 0)
polygon = PackedVector2Array(-9, -1, -12, -3, -11, 0, -12, 3, -9, 1, 7, 1, 6, 3, 12, 0, 6, -3, 7, -1)

[node name="Outline" type="Polygon2D" parent="AnimationBody/ArrowBody" index="0"]
show_behind_parent = true
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-9, -2, 6, -2, 5, -4, 6, -4, 12, -1, 13, 0, 12, 1, 6, 4, 5, 4, 6, 2, -9, 2, -12, 4, -13, 4, -13, 3, -12, 0, -13, -3, -13, -4, -12, -4)

[node name="Hitbox" type="Area2D" parent="AnimationBody" index="4"]
visible = false
script = ExtResource("3_42xb4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationBody/Hitbox" index="0"]
position = Vector2(13, 0)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_w7b1b")
debug_color = Color(0.827451, 0.372549, 0.364706, 0.419608)

[node name="BulletSpawn" type="Marker2D" parent="AnimationBody" index="5"]
position = Vector2(13, 0)

[connection signal="main_attack_used" from="." to="." method="on_main_attack_used"]
[connection signal="other_attack_used" from="." to="." method="on_other_attack_used"]
